k8s/deployed/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    acme.cert-manager.io/http01-ingress-class: traefik
    cert-manager.io/acme-challenge-type: http01
    cert-manager.io/cluster-issuer: letsencrypt-prod
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"networking.k8s.io/v1","kind":"Ingress","metadata":{"annotations":{"acme.cert-manager.io/http01-ingress-class":"traefik","cert-manager.io/acme-challenge-type":"http01","cert-manager.io/cluster-issuer":"letsencrypt-prod","kubernetes.io/ingress.class":"traefik","traefik.ingress.kubernetes.io/redirect-entry-point":"https","traefik.ingress.kubernetes.io/redirect-permanent":"true"},"name":"tavira-ingress","namespace":"default"},"spec":{"rules":[{"host":"tavira.com.co","http":{"pat [...]
    kubernetes.io/ingress.class: traefik
    traefik.ingress.kubernetes.io/redirect-entry-point: https
    traefik.ingress.kubernetes.io/redirect-permanent: "true"
  creationTimestamp: "2025-10-24T22:25:11Z"
  generation: 3
  name: tavira-ingress
  namespace: default
  resourceVersion: "147659"
  uid: bdb8a914-515a-42e3-bfb9-528a632e5683
spec:
  rules:
  - host: tavira.com.co
    http:
      paths:
      - backend:
          service:
            name: tavira-service
            port:
              number: 80
        path: /
        pathType: Prefix
  - host: torresdevillacampestre.tavira.com.co
    http:
      paths:
      - backend:
          service:
            name: tavira-service
            port:
              number: 80
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - tavira.com.co
    secretName: tavira-tls
  - hosts:
    - torresdevillacampestre.tavira.com.co
    secretName: torresdevillacampestre-tls
status:
  loadBalancer:
    ingress:
    - ip: 147.93.182.90
