k8s/deployed/postgres-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"v1","kind":"Service","metadata":{"annotations":{},"labels":{"app":"postgres"},"name":"postgres","namespace":"default"},"spec":{"ports":[{"name":"postgres","port":5432,"protocol":"TCP","targetPort":5432}],"selector":{"app":"postgres"},"type":"ClusterIP"}}
  creationTimestamp: "2025-10-25T15:39:01Z"
  labels:
    app: postgres
  name: postgres
  namespace: default
  resourceVersion: "45123"
  uid: 441740d6-da57-41ec-bcd0-8d3e4751aaed
spec:
  clusterIP: 10.43.183.84
  clusterIPs:
  - 10.43.183.84
  internalTrafficPolicy: Cluster
  ipFamilies:
  - IPv4
  ipFamilyPolicy: SingleStack
  ports:
  - name: postgres
    port: 5432
    protocol: TCP
    targetPort: 5432
  selector:
    app: postgres
  sessionAffinity: None
  type: ClusterIP
status:
  loadBalancer: {}
