k8s/deployed/redis-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"v1","kind":"Service","metadata":{"annotations":{},"name":"redis","namespace":"default"},"spec":{"ports":[{"port":6379,"targetPort":6379}],"selector":{"app":"redis"},"type":"ClusterIP"}}
  creationTimestamp: "2025-10-25T15:40:44Z"
  name: redis
  namespace: default
  resourceVersion: "45229"
  uid: 7da49a93-6fa0-4f95-9c40-ce50497b5be2
spec:
  clusterIP: 10.43.137.99
  clusterIPs:
  - 10.43.137.99
  internalTrafficPolicy: Cluster
  ipFamilies:
  - IPv4
  ipFamilyPolicy: SingleStack
  ports:
  - port: 6379
    protocol: TCP
    targetPort: 6379
  selector:
    app: redis
  sessionAffinity: None
  type: ClusterIP
status:
  loadBalancer: {}
