k8s/deployed/service-monitor.yaml
apiVersion: v1
kind: Service
metadata:
  name: tavira-queue-worker-metrics
  namespace: default
  labels:
    app: tavira-queue-worker
    metrics: prometheus
spec:
  type: ClusterIP
  ports:
  - name: metrics
    port: 9090
    targetPort: 9090
    protocol: TCP
  selector:
    app: tavira-queue-worker
---
apiVersion: monitoring.coreos.com/v1
kind: ServiceMonitor
metadata:
  name: tavira-queue-worker-metrics
  namespace: default
  labels:
    app: tavira-queue-worker
    prometheus: kube-prometheus
spec:
  selector:
    matchLabels:
      app: tavira-queue-worker
      metrics: prometheus
  endpoints:
  - port: metrics
    interval: 30s
    path: /metrics
    scheme: http
