k8s/deployed/service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"v1","kind":"Service","metadata":{"annotations":{},"labels":{"app":"tavira"},"name":"tavira-service","namespace":"default"},"spec":{"ports":[{"name":"http","port":80,"protocol":"TCP","targetPort":"http"}],"selector":{"app":"tavira"},"sessionAffinity":"ClientIP","sessionAffinityConfig":{"clientIP":{"timeoutSeconds":10800}},"type":"ClusterIP"}}
  creationTimestamp: "2025-10-25T14:11:08Z"
  labels:
    app: tavira
  name: tavira-service
  namespace: default
  resourceVersion: "40654"
  uid: 8675da51-2f55-4c35-a6a0-8eab7c36743e
spec:
  clusterIP: 10.43.63.36
  clusterIPs:
  - 10.43.63.36
  internalTrafficPolicy: Cluster
  ipFamilies:
  - IPv4
  ipFamilyPolicy: SingleStack
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: http
  selector:
    app: tavira
  sessionAffinity: ClientIP
  sessionAffinityConfig:
    clientIP:
      timeoutSeconds: 10800
  type: ClusterIP
status:
  loadBalancer: {}
